tests/paczka1/fuzzy1/97522137.err
Error in line 2: DiQsQO A571 30,6
Error in line 12: DiQsQO A924 92,8
Error in line 13: DiQsQO S499 7,2
Error in line 19: A924 S499 83,4
Error in line 23: A924 A851 37,9
Error in line 35: ujItTVxCRO A851 269,75
